<resources>
    <string name="app_name">Demos</string>
    <string name="action_settings">Settings</string>

    <string name="upload_dialog_title">Subiendo las fotos</string>
    <string name="result_dialog_title">Resultado de la subida</string>
    <string name="result_dialog_button">Aceptar</string>
    <string name="register_dialog_title">Registrando campaña</string>
    <string name="login_dialog_title">Iniciando sesión</string>

    <string name="toastMakeFrontPhoto">Haga una foto de la parte frontal del DNI.</string>
    <string name="toastMakeBackPhoto">Ahora, haga una foto de la parte trasera del DNI.</string>
    <string name="toastWrongUploadingResult">Error subiendo las fotos al servidor,\nintentelo de nuevo más tarde</string>
    <string name="toastWrongRegisterResult">Error registrando la campaña,\ninténtelo de nuevo más tarde</string>
    <string name="toastWrongLoginResult">Error inciando sesión en la campaña,\ninténtelo de nuevo más tarde</string>
    <string name="toastCanceledResult">Operación cancelada por el usuario</string>
    <string name="toastCorrectUploadingResult">Fotos subidas correctamente al servidor</string>
    <string name="toastCorrectRegisterResult">Campaña registrada correctamente</string>
    <string name="toastCorrectLoginResult">Sesión iniciada correctamente</string>
    <string name="toastMainForbidden">No puede enviar DNIs sin haber iniciado sesión en alguna campaña previamente</string>

    <string name="login_drawer_title">Iniciar sesión en otra campaña</string>
    <string name="register_drawer_title">Registrar una campaña</string>
    <string name="main_drawer_title">Enviar DNI</string>
    <string name="instructions_drawer_title">Instrucciones</string>

    <string name="header_title">Campaña actual:</string>
    <string name="header_subtitle">Ninguna</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>

    <string name="prompt_campaign">Campaña</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_repeat">Repita la contraseña</string>
    <string name="prompt_sign_paper">Número de hoja de firmas</string>
    <string name="prompt_date">Fecha de borrado de campaña</string>

    <string name="action_sign_in">Inicia sesión</string>
    <string name="action_sign_in_short">Inicia\nsesión</string>
    <string name="action_preregister">¿Aún no tienes campaña?\nCrea una nueva campaña</string>
    <string name="action_register">Crea una nueva campaña</string>

    <string name="error_field_required">Campo requerido</string>
    <string name="error_invalid_campaign">Campaña inválida, debe de tener una longitud de, al menos,
                                        2 caracteres alfanumericos o . _ -</string>
    <string name="error_invalid_password">Campaña inválida, debe de tener una longitud de, al menos, 8 caracteres ASCII</string>
    <string name="error_passwords_not_equals">Las contraseñas no coinciden</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_invalid_date">La fecha de borrado ha de ser posterior a la actual</string>
    <string name="error_invalid_sign_paper">El número ha de ser positivo</string>

    <string name="preinstructions_main"><b>Para enviar una firma introduzca el número de la hoja de firmas
        en la que se encuentre esta y pulse el botón verde con el símbolo +.</b></string>
    <string name="postinstructions_main">Tras esto se le pedirá hacer una foto a la parte frontal del DNI (la que contiene la foto).
        A continuación gire el DNI y haga lo mismo con la otra cara.
        Aparecerá un diálogo que le mostrará el progreso y resultado de la operación.</string>

    <string name="title_instructions">Preguntas frecuentes</string>
    <string name="bad_picture_instructions"><b>¿Qué hacer si mis fotos son rechazadas?</b>\n\nHaga la
        fotografía del DNI sobre un folio blanco en el esté dibujado el contorno de un DNI para favorecer
        su reconocimiento.\n\nIntente que la zona del número de DNI de la parte posterior y la del nombre y
        apellidos de la posterior estén lo más enfocadas y nítidas posibles. Para ello evite usar flash,
        las sombras o los brillos y si su cámara dispone de enfoque manual apunte a estas zonas por
        favor.\n\nTras iniciar la toma de fotos procure girar su dispositivo durante un par de segundos
        antes de realizar la fotografía para evitar que las imágenes puedan quedar giradas 90º, lo que
        puede hacer fallar el proceso de reconocimiento de caracteres.
    </string>
    <string name="photo_destination_instructions"><b>¿A dónde van las fotos realizadas?</b>\n\nLas fotos
        que usted realiza se envían utilizando protocolos seguros a un servidor remoto en el que se
        recorta el DNI y se intenta extraer el número así como el nombre y apellidos de
        este.\n\nDicha información, junto con la de su campaña, se almacena encriptada hasta que llega
        la fecha de borrado de la campaña en la cual, automáticamente, se borra toda la información
        tanto de la campaña como las imágenes de los DNI subidos.
    </string>
    <string name="how_to_retrieve_instructions"><b>¿Cómo recuperar las firmas para presentarlas?</b>\n\nPara
        recuperar el listado de firmas con las fotografías de los DNIs y el resultado del reconocimiento
        de las fotografías vaya a la URL https://prodiasv08.fis.usal.es/Demos_Rest/formDownloadQuery.html
        en cualquier navegador web.\n\nLe aparecerá un mensaje indicándole que no es seguro, por favor añada
        una excepción y en la página que se mostrará a continuación introduzca el nombre y contraseña de
        su campaña.\n\nTras esto podrá ver un mensaje informativo con el tiempo y tamaño estimados de la descarga
        así como a donde debe dirigirse para efectuar dicha descarga.
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>
