<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.usal.tfg.demos.InstructionsActivity"
    tools:showIn="@layout/app_bar_instructions">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_instructions"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                />
            <View
                android:background="@color/secondary_text_default_my_theme"
                android:layout_below="@id/title_instructions"
                android:layout_width = "fill_parent"
                android:layout_height="1dip"
                android:layout_centerVertical ="true"/>

            <TextView

                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_below="@id/title_instructions"
                android:text="@string/bad_picture_instructions"
                android:maxLines="2"
                />
            <ImageButton
                android:id="@+id/expand_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/test"
                android:background="@android:color/transparent"
                />

            <View
                android:background="@color/secondary_text_default_my_theme"
                android:layout_below="@id/expand_button"
                android:layout_width = "fill_parent"
                android:layout_height="1dip"
                android:layout_centerVertical ="true"/>
            <TextView

                android:id="@+id/test2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_below="@id/expand_button"
                android:text="@string/postinstructions_main"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:maxLines="1"
                />
            <ImageButton
                android:id="@+id/expand_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/test2"
                android:background="@android:color/transparent"
                />
            <View
                android:background="@color/secondary_text_default_my_theme"
                android:layout_below="@id/expand_button2"
                android:layout_width = "fill_parent"
                android:layout_height="1dip"
                android:layout_centerVertical ="true"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>